--- a/backend/package.json
+++ b/backend/package.json
@@ -31,9 +31,10 @@
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
+    "@prisma/client": "4.13.0",
     "@types/express": "^4.17.13",
-    "@types/jest": "29.5.0",
-    "@types/node": "18.15.11",
+    "@types/jest": "29.5.1",
+    "@types/node": "18.16.3",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
@@ -42,13 +43,14 @@
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "29.5.0",
     "prettier": "^2.3.2",
+    "prisma": "^4.12.0",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
-    "ts-jest": "29.0.5",
+    "ts-jest": "29.1.0",
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
     "tsconfig-paths": "4.2.0",
-    "typescript": "^4.7.4"
+    "typescript": "^5.0.4"
   },
   "jest": {
     "moduleFileExtensions": [
