--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -36,3 +36,12 @@ lerna-debug.log*
 
 # Environment
 .env
+
+# Yarn
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
